# cic-wf

./: .gitignore  Abstract.hs  CICprototype.cabal  Command.hs  Conversion.hs  Environment.hs  Impossible.hs  Internal.hs  Main.hs  MonadUndo.hs  Parser.hs  Position.hs  README  TCM.hs  Term.hs  Test.hs  TopLevel.hs  Typing.hs  cicminus.cabal  cicminus.el  cicwf.cabal  combinators.cic  parsetest.cic  prelude.cic  stack.yaml  undefined.h
Kernel/: Case.hs  Command.hs  Constraints.hs  Conversion.hs  Fix.hs  GlobalMonad.hs  Inductive.hs  Permutation.hs  PrettyTCM.hs  RecCheck.hs  TCM.hs  TCMErrors.hs  TypeChecking.hs  TypeChecking.hs-boot  Unification.hs  Whnf.hs
Refiner/: Conversion.hs  Environment.hs  Internal.hs  RM.hs  Refiner.hs  TestM.hs  Unify.hs
Syntax/: Abstract.hs  Alex.hs  Bind.hs  Common.hs  ETag.hs  Global.hs  Internal.hs  InternaltoAbstract.hs  Lexer.x  Name.hs  ParseMonad.hs  Parser.hs  Parser.y  Position.hs  Scope.hs  ScopeMonad.hs  Size.hs  Tokens.hs
TopLevel/: Completion.hs  Monad.hs  TopLevel.hs
TypeChecking/: Case.hs  Constraints.hs  Conversion.hs  Fix.hs  Inductive.hs  Permutation.hs  PrettyTCM.hs  RecCheck.hs  TCM.hs  TCMErrors.hs  TypeChecking.hs  TypeChecking.hs-boot  Unification.hs  Whnf.hs
Utils/: Fresh.hs  Impossible.hs  Maybe.hs  Misc.hs  MonadUndo.hs  Pretty.hs  Sized.hs  Value.hs
examples/: bfs.cic  case-test1.cic  case-test2.cic  case-test3.cic  combinators.cic  error.cic  error2.cic  false.cic  fib.cic  fix-test1.cic  indtest1.cic  io.cic  log2.cic  minus-div.cic  nat.cic  parsetest.cic  parsetest4.cic  plus.cic  pptest1.cic  prelude.cic  qsortnat.cic  quicksort.cic  scopetest.cic  size-test1.cic  sort.cic  sp.cic  sp2.cic  sr.cic  stages-test1.cic  streams.cic  trees.cic  universes.cic  vec.cic
src/: Main.hs
src/CICminus/Syntax/: Abstract.hs  AbstractToConcrete.hs  Alex.hs  Colors.hs  Common.hs  Concrete.hs  Internal.hs  InternalToAbstract.hs  Lexer.x  ParseMonad.hs  Parser.y  Position.hs  Scope.hs  ScopeMonad.hs  Size.hs  Tokens.hs
src/CICminus/TopLevel/: Monad.hs  TopLevel.hs
src/CICminus/TypeChecking/: Case.hs  Constraints.hs  Conversion.hs  Declaration.hs  Fix.hs  Fixpoint.hs  Inductive.hs  Match.hs  Permutation.hs  PrettyTCM.hs  RecCheck.hs  TCM.hs  TCMErrors.hs  TypeChecking.hs  TypeChecking.hs-boot  Unification.hs  Whnf.hs
src/CICminus/Utils/: Fresh.hs  Impossible.hs  Lens.hs  Maybe.hs  Misc.hs  MonadUndo.hs  Pretty.hs  Sized.hs  Value.hs
src/CICwf/Syntax/: Abstract.hs  AbstractToConcrete.hs  Alex.hs  Colors.hs  Common.hs  Concrete.hs  Internal.hs  InternalToAbstract.hs  InternalToConcrete.hs  Lexer.x  ParseMonad.hs  Parser.y  Position.hs  Scope.hs  ScopeMonad.hs  Size.hs  Tokens.hs
src/CICwf/TopLevel/: Monad.hs  TopLevel.hs
src/CICwf/TypeChecking/: Case.hs  Constraints.hs  Conversion.hs  Declaration.hs  Fix.hs  Fixpoint.hs  Inductive.hs  Match.hs  Permutation.hs  PrettyTCM.hs  RecCheck.hs  SolveWf.hs  TCM.hs  TCMErrors.hs  TypeChecking.hs  TypeChecking.hs-boot  Unification.hs  Whnf.hs
src/CICwf/Utils/: Fresh.hs  Impossible.hs  Lens.hs  Maybe.hs  Misc.hs  MonadUndo.hs  Pretty.hs  Sized.hs  Value.hs
tests/: constr01.cic  error.cic  filter.cic  id.cic  infer01.cic  infer02.cic  infer03.cic  infer04.cic  infer05.cic  infer06.cic  infer07.cic  infer08.cic  infer09.cic  infer10.cic  infer11.cic  infer12.cic  infer13.cic  infer14.cic  infer15.cic  infer16.cic  infer17.cic  infer18.cic  io.cic  noterm.cic  parse01.cic  parsetest1.cic  parsetest2.cic  pp01.cic  pptest1.cic  red01.cic  wf01.cic  wf02.cic  wf03.cic  wf04.cic  wf05.cic  wf06.cic  wf07.cic  wf08.cic
