Name:                CICprototype
Version:             0.1
Description:
License:             GPL
License-file:        LICENSE
Author:              Jorge Luis Sacchini
Maintainer:          Jorge Luis Sacchini <sacchini@qatar.cmu.edu>
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable cic
  Main-is:           Main.hs
  Build-Depends:     base >= 4.1,
                     parsec >= 2,
                     pretty -any,
                     haskeline >= 0.6,
                     mtl -any,
                     containers -any,
                     haskell98 >= 1.0
