Name:                CICprototype
Version:             0.1
Description:
License:             GPL
License-file:        LICENSE
Author:              Jorge Luis Sacchini
Maintainer:          Jorge Luis Sacchini <sacchini@qatar.cmu.edu>
Build-Type:          Simple
Cabal-Version:       >=1.2

extra-source-files: undefined.h

Executable cic
  Main-is:           Main.hs
  Build-Depends:     base >= 4.1,
                     parsec >= 2,
                     pretty -any,
                     haskeline >= 0.6,
                     mtl == 1.*,
                     containers -any,
                     haskell98 >= 1.0,
                     array -any,
                     filepath -any
  Build-Tools:       alex >= 2.0,
                     happy >= 1.18
  extensions:        CPP
  other-modules:     Syntax.Lexer
                     Syntax.Parser
                     Syntax.Abstract
                     Syntax.Internal
                     Syntax.InternaltoAbstract
                     Syntax.Position
                     Syntax.Alex
                     Syntax.ParseMonad
                     Syntax.Tokens
                     Syntax.Name
                     Syntax.Scope
                     Utils.Fresh
                     Utils.Misc
                     Utils.Pretty
                     Utils.Impossible
                     Utils.MonadUndo
                     Kernel.TCM
                     Kernel.TypeChecking
                     Kernel.Whnf
                     Kernel.Conversion

Executable cic-parsetest
  Main-is:           ParseTest.hs
  Build-Depends:     base >= 4.1,
                     parsec >= 2,
                     pretty -any,
                     haskeline >= 0.6,
                     mtl == 1.*,
                     containers -any,
                     haskell98 >= 1.0,
                     array -any,
                     filepath -any
  Build-Tools:       alex >= 2.0,
                     happy >= 1.18
  extensions:        CPP
  other-modules:     Syntax.Lexer
                     Syntax.Parser
