Name:                cicminus
Version:             0.1
Description:
License:             GPL
License-file:        LICENSE
Author:              Jorge Luis Sacchini
Maintainer:          Jorge Luis Sacchini <sacchini@qatar.cmu.edu>
Build-Type:          Simple
Cabal-Version:       >=1.2

extra-source-files: undefined.h

Executable cicminus
  Main-is:           Main.hs
  Build-Depends:     pretty -any,
                     haskeline -any,
                     mtl -any,
                     base -any,
                     containers -any,
                     array -any,
                     filepath -any,
                     fgl -any
  Build-Tools:       alex -any,
                     happy -any
  extensions:        CPP
  other-modules:     Syntax.Lexer
                     Syntax.Parser
                     Syntax.Abstract
                     Syntax.Internal
                     Syntax.InternaltoAbstract
                     Syntax.Position
                     Syntax.Alex
                     Syntax.ParseMonad
                     Syntax.Tokens
                     Syntax.Common
                     Syntax.Scope
                     Syntax.Size
                     Utils.Fresh
                     Utils.Misc
                     Utils.Maybe
                     Utils.Pretty
                     Utils.Impossible
                     Utils.Sized
                     TypeChecking.Permutation
                     TypeChecking.Constraints
                     TypeChecking.TCM
                     TypeChecking.PrettyTCM
                     TypeChecking.TCMErrors
                     TypeChecking.TypeChecking
                     TypeChecking.Whnf
                     TypeChecking.Conversion
                     TypeChecking.Unification
                     TypeChecking.Fix
                     TypeChecking.Case
                     TypeChecking.Inductive
                     TopLevel.Monad
                     TopLevel.TopLevel
