Name:                cicminus
Version:             0.1
Description:
License:             GPL
License-file:        LICENSE
Author:              Jorge Luis Sacchini
Maintainer:          Jorge Luis Sacchini <sacchini@qatar.cmu.edu>
Build-Type:          Simple
Cabal-Version:       >=1.2

extra-source-files: undefined.h

Executable cicminus
  Main-is:           Main.hs
  Build-Depends:     pretty -any,
                     haskeline -any,
                     mtl -any,
                     base -any,
                     containers -any,
                     array -any,
                     filepath -any,
                     fgl -any
  Build-Tools:       alex -any,
                     happy -any
  extensions:        CPP
  other-modules:
                     Syntax.Abstract
                     Syntax.Alex
                     Syntax.Common
                     Syntax.Internal
                     Syntax.InternaltoAbstract
                     Syntax.Lexer
                     Syntax.ParseMonad
                     Syntax.Parser
                     Syntax.Position
                     Syntax.Scope
                     Syntax.Size
                     Syntax.Tokens
                     Utils.Fresh
                     Utils.Impossible
                     Utils.Maybe
                     Utils.Misc
                     Utils.MonadUndo
                     Utils.Pretty
                     Utils.Sized
                     TypeChecking.Case
                     TypeChecking.Constraints
                     TypeChecking.Conversion
                     TypeChecking.Fix
                     TypeChecking.Inductive
                     TypeChecking.Permutation
                     TypeChecking.PrettyTCM
                     TypeChecking.RecCheck
                     TypeChecking.TCM
                     TypeChecking.TCMErrors
                     TypeChecking.TypeChecking
                     TypeChecking.Unification
                     TypeChecking.Whnf
                     TopLevel.Monad
                     TopLevel.TopLevel
