Name:                cicminus
Version:             0.1
Description:
License:             GPL
License-file:        LICENSE
Author:              Jorge Luis Sacchini
Maintainer:          Jorge Luis Sacchini <sacchini@qatar.cmu.edu>
Build-Type:          Simple
Cabal-Version:       >=1.2

extra-source-files:  src/undefined.h

Executable cicminus
  main-is:           Main.hs
  hs-source-dirs:    src/
  include-dirs:      src/
  build-Depends:     pretty -any,
                     haskeline -any,
                     mtl -any,
                     base -any,
                     containers -any,
                     array -any,
                     filepath -any,
                     fgl -any,
                     ansi-wl-pprint -any
  build-Tools:       alex -any,
                     happy -any
  ghc-options:       -O2
                     -threaded
  other-modules:
                     CICminus.Syntax.Concrete
                     CICminus.Syntax.Abstract
                     CICminus.Syntax.Alex
                     CICminus.Syntax.Common
                     CICminus.Syntax.Internal
                     CICminus.Syntax.InternalToAbstract
                     CICminus.Syntax.AbstractToConcrete
                     CICminus.Syntax.Lexer
                     CICminus.Syntax.ParseMonad
                     CICminus.Syntax.Parser
                     CICminus.Syntax.Position
                     CICminus.Syntax.Scope
                     CICminus.Syntax.Size
                     CICminus.Syntax.Tokens
                     CICminus.Utils.Fresh
                     CICminus.Utils.Impossible
                     CICminus.Utils.Maybe
                     CICminus.Utils.Misc
                     CICminus.Utils.MonadUndo
                     CICminus.Utils.Pretty
                     CICminus.Utils.Sized
                     CICminus.TypeChecking.Case
                     CICminus.TypeChecking.Constraints
                     CICminus.TypeChecking.Conversion
                     CICminus.TypeChecking.Fix
                     CICminus.TypeChecking.Inductive
                     -- CICminus.TypeChecking.Permutation
                     CICminus.TypeChecking.PrettyTCM
                     CICminus.TypeChecking.RecCheck
                     CICminus.TypeChecking.TCM
                     CICminus.TypeChecking.TCMErrors
                     CICminus.TypeChecking.TypeChecking
                     CICminus.TypeChecking.Declaration
                     CICminus.TypeChecking.Match
                     -- CICminus.TypeChecking.Unification
                     CICminus.TypeChecking.Whnf
                     CICminus.TopLevel.Monad
                     CICminus.TopLevel.TopLevel
